# poker-exercise

./: .gitignore  README.md  compose.yml
backend/: .env  .flake8  Dockerfile  pyproject.toml
backend/src/: config.py  dependencies.py  main.py
backend/src/core/database/: connection.py  create_tables.py
backend/src/features/hands/data/: dependacies.py
backend/src/features/hands/data/repositories/: action_repo.py  hand_repo.py  player_repo.py
backend/src/features/hands/data/services/: hand_service.py  pokerkit_service.py
backend/src/features/hands/domain/entities/: action.py  hand.py  player.py
backend/src/features/hands/presentation/routes/: route.py
backend/src/features/hands/presentation/schema/: action.py  hand.py
backend/tests/features/hands/presentation/routes/: test_route.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: actionButtons.tsx  gameControls.tsx  gameLogs.tsx  handHistory.tsx
frontend/app/lib/: axios.ts
frontend/app/store/: gameState.ts
frontend/tests/: handHistory.spec.ts  pokerGame.spec.ts
