[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sahib-sem <semahegnsahib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = {extras = ["standard"], version = "^0.114.1"}
pokerkit = "0.5.3"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
